# rabish-pen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.esp32c3  sdkconfig.esp32s3
components/amp/: CMakeLists.txt  Kconfig  amp_mem.c  opus_decoder.c  playlist.c  playlist.h
components/amp/include/amp/: amp_mem.h  audio_types.h  opus_decoder.h
components/bsp/: bsp.h
components/cutils/: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  main.c
